--- a/force-app/main/default/aura/StudyCard/StudyCard.cmp
+++ b/force-app/main/default/aura/StudyCard/StudyCard.cmp
@@ -3,19 +3,24 @@
  -->
 
 <aura:component description="StudyCard" controller="StudyListViewController">
+
+    <!-- attributes: -->
     <aura:attribute name="currentStudy" type="Object" required="true"/>
     <aura:attribute name="userMode" type="String" description="HCP/PI/Patient"/>
     <aura:attribute name="parent" type="Aura.Component"/>
-    <aura:attribute name="detailsExpanded" type="Boolean" default="{!v.userMode=='PI' ? true : false}"/>
+    <aura:attribute name="detailsExpanded" type="Boolean"/>
 
+    <!-- component body: -->
     <div class="rr-white-panel slvi-container">
         <div class="slvi-top-container-hcp slvi-section">
             <!-- Name: -->
             <div class="slvi-name-section-hcp">
                 <div class="slds-grid slds-wrap">
                     <div class="slds-col slds-small-size_1-of-1 slds-x-small-size_1-of-1 slds-medium-size_3-of-4 slds-large-size_3-of-4 study-name">
-                        <c:RRLink class="study-title" label="{!v.currentStudy.trial.Study_Code_Name__c}"
-                                  page="{!'study-workspace?id=' + v.currentStudy.trial.Id}"/>
+                        <c:uiLimitTextByLines maxLines="{!if($Browser.formFactor == 'DESKTOP', 1, 3)}" lineHeight="33" unitsType="px">
+                            <c:RRLink class="study-title" label="{!v.currentStudy.trial.Study_Code_Name__c}"
+                                      page="{!'study-workspace?id=' + v.currentStudy.trial.Id}"/>
+                        </c:uiLimitTextByLines>
                     </div>
                     <div class="slds-col slds-small-size_2-of-3 slds-x-small-size--2-of-3 slds-medium-size_1-of-1 slds-large-size_1-of-1 slds-large-order_3 slds-medium-order_3 sponsor-name">
                         {!v.currentStudy.trial.Study_Sponsor__c}
@@ -73,7 +78,6 @@
                 </div>
 
                 <div class="sponsor-name">{!v.currentStudy.trial.Study_Sponsor__c}</div>
-
                 <div class="slvi-objective-section">
                     <div class="objective-text">{!v.currentStudy.trial.Detailed_Description__c}</div>
                     <div class="objective-link">
@@ -101,7 +105,7 @@
                 </aura:iteration>
             </div>
         </aura:if>
-
+        <!-- UI for PI: -->
         <aura:if isTrue="{!v.userMode == 'PI'}">
             <div style="background-color: #f2f2f2;box-sizing: border-box;">
                 <div class="slds-grid slds-wrap slds-p-horizontal_medium">
@@ -121,11 +125,14 @@
                 </div>
             </div>
             <div class="{!v.detailsExpanded == true ? ' ' : 'slds-hide '}">
-                    <aura:iteration items="{!v.currentStudy.ssList}" var="siteWrapper" indexVar="siteWrappIndx">
-                        <c:StudySiteCardForPI siteWrapper="{!siteWrapper}" userMode="{!v.userMode}" studyListViewComponent="{!v.parent}"/>
-                    </aura:iteration>
+                <aura:iteration items="{!v.currentStudy.ssList}" var="siteWrapper" indexVar="siteWrappIndx">
+                    <c:StudySiteCardForPI siteWrapper="{!siteWrapper}" userMode="{!v.userMode}"
+                                          studyListViewComponent="{!v.parent}"
+                                          delegatePicklist="{!v.currentStudy.delegatePicklist}"/>
+                </aura:iteration>
             </div>
         </aura:if>
+        <!-- UI for RP: -->
         <aura:if isTrue="{!v.userMode == 'HCP'}">
             <div style="background-color: #f2f2f2; min-height: 43px; box-sizing: border-box; padding-top: 12px;">
                 <div class="slds-grid slds-wrap slds-p-horizontal_medium">
@@ -194,12 +201,27 @@
                 </div>
             </div>
             <div class="{!v.detailsExpanded == true ? ' ' : 'slds-hide '}">
-                <div class="slds-p-horizontal_medium slds-p-bottom_small">
+                <aura:iteration items="{!v.currentStudy.sites}" var="siteWrapper">
+                    <c:StudySiteCardForRP siteWrapper="{!siteWrapper}"/>
+                </aura:iteration>
+                <div class="slds-p-around--medium">
+                    <div class="slds-grid slds-wrap slds-grid_align-center slds-grid_vertical-align-center"
+                         style="min-height: 100%;">
+                        <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1 slvi-padded-panel-left slvi-header-item">
+                                <span class="header-white-panel"
+                                      style="font-size: 16px;">{!$Label.c.MyStudy_None_of_these_sites_work}</span>
+                        </div>
+                        <div class="slds-col slds-medium-size_1-of-2 slds-size_1-of-1 slvi-padded-panel-right slvi-header-item ">
+                            <button class="apollo-btn primary slvi-search-site-btn"
+                                    onclick="{!c.navigateToSitesSearch}"
+                                    disabled="{!v.accessUserLevel=='Level 2'}"
+                                    title="{!v.accessUserLevel=='Level 2'?$Label.c.RSN_Your_permissions_do_not_permit_this_action:''}">
+                                {!$Label.c.MyStudy_Find_More_Sites}
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </aura:if>
     </div>
-
-
-
 </aura:component>
