Additional language fields

--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -303,7 +303,7 @@
     <apex:form id="main_form">
 
         <!-- update language function: -->
-        <apex:actionFunction action="{!translateFieldsAction}" name="translateFields"/>
+        <apex:actionFunction action="{!translateFieldsAction}" name="translateFields" />
         <apex:actionFunction action="{!updateBrowserLanguageAction}" name="updateLanguage" onComplete="translateFields();"/>
         <!-- upload photo: -->
         <apex:actionFunction action="{!upload}" name="uploadAF"/>
@@ -616,7 +616,7 @@
                                                 </button>
                                             </span>
                                     </label>
-                                    <apex:inputField styleClass="slds-input" value="{!translation.Language__c}" >
+                                    <apex:inputField styleClass="slds-input" value="{!userVal.contact.Language__c}" >
                                         <apex:actionSupport event="onchange" action="{!updateLanguageAction}"/>
                                     </apex:inputField>
                                 </div>
@@ -636,7 +636,7 @@
                                             </span>
                                     </label>
                                     <apex:inputField styleClass="slds-input" value="{!userVal.contact.SecondChoiceLanguage__c}" >
-                                        <apex:actionSupport event="onchange" action="{!updateLanguageAction}"/>
+                                        <apex:actionSupport event="onchange" action="{!updateLanguageAction}" />
                                     </apex:inputField>
                                 </div>
                                 <div id="langSelectContainer" class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_1-of-3">
