--- a/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -36,6 +36,10 @@
                 <behavior>Edit</behavior>
                 <field>Visit_Results_Sharing__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Approved_Lng__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -336,7 +340,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1j000000YqPs</masterLabel>
+        <masterLabel>00h1X000000OhKX</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
