--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -3,7 +3,7 @@
  -->
 
 <apex:page id="RRChangePassword"  showHeader="false" title="{!$Label.site.change_password}" controller="RRChangePasswordController"
-           standardStylesheets="false" docType="html-5.0" language="{!translation.Language__c}">
+           standardStylesheets="false" docType="html-5.0" language="{!userVal.Contact.Language__c}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <apex:slds />
     <apex:stylesheet value="{!$Resource.proximanova}/proximanova.css"/>
