--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -41,4 +41,6 @@
             <c:RRLink page="study-workspace?tab=tab-visits" label="{!$Label.c.Resources_See_All}"/>
         </div>
     </div>
+
+        <c:TravelSupport aura:id="showVendors" hasDefault="true"/>
 </aura:component>
