--- a/force-app/main/default/aura/Action_EditLocation/Action_EditLocation.cmp
+++ b/force-app/main/default/aura/Action_EditLocation/Action_EditLocation.cmp
@@ -1,5 +1,5 @@
 <!--
- - Created by user on 21-Aug-19.
+ - Created by Nikita Abrazhevitch on 21-Aug-19.
  -->
 
 <aura:component description="Action_EditLocation" controller="Action_EditLocationRemote">
