Replaced 2nd and 3rd language fields in Contact

--- a/force-app/main/default/pages/RRChangePassword.page
+++ b/force-app/main/default/pages/RRChangePassword.page
@@ -635,7 +635,7 @@
                                                 </button>
                                             </span>
                                     </label>
-                                    <apex:inputField styleClass="slds-input" value="{!userVal.contact.SecondChoiceLanguage__c}" >
+                                    <apex:inputField styleClass="slds-input" value="{!userVal.contact.Second_Choice_Language__c}" >
                                         <apex:actionSupport event="onchange" action="{!updateLanguageAction}" />
                                     </apex:inputField>
                                 </div>
@@ -654,7 +654,7 @@
                                                 </button>
                                             </span>
                                     </label>
-                                    <apex:inputField styleClass="slds-input" value="{!userVal.Contact.ThirdChoiceLanguage__c}">
+                                    <apex:inputField styleClass="slds-input" value="{!userVal.Contact.Third_Choice_Language__c}">
                                         <apex:actionSupport event="onchange" action="{!updateLanguageAction}" />
                                     </apex:inputField>
                                 </div>
